--- a/src/elements/proto-element.sass
+++ b/src/elements/proto-element.sass
@@ -1,3 +1,15 @@
-hello-world
-  background: red
-  color: white
+// neither body or the the element selector are applied because css is loaded within scope of custom element
+body
+  background-color: red
+proto-element
+  background-color: green
+  display: block
+
+
+// only :host styles are in use and are scoped within the template they are called from
+\:host
+  background-color: yellow
+  display: block
+
+
+// to get a negative, move the import within proto-element out of the template, and on top beneath the other imports. the document body and proto-element should render red and green then.
