--- a/src/elements/proto-element.sass
+++ b/src/elements/proto-element.sass
@@ -12,4 +12,4 @@ proto-element
   display: block
 
 
-// to get a negative, move the import within proto-element out of the template, and on top beneath the other imports. the document body and proto-element should render red and green then.
+// to get a negative, move the import within proto-element.html (.jade) out of the template, and on top beneath the other imports. the document body and proto-element should render red and green then.
