load index.css to check livereload against component css files

--- a/src/index.jade
+++ b/src/index.jade
@@ -3,7 +3,7 @@ html(ng-app="tazz")
 head
   meta(charset="utf-8")
   title
-  //- link(href="index.css" rel="stylesheet" type="text/css")
+  link(href="index.css" rel="stylesheet" type="text/css")
 
   //- libraries are installed via bower and simply included piece by piece here. we could also use require.js, but this is far simpler and doesn't need any setup
   //- script(src="bower_components/angular/angular.js")
