Windows™ Recovery Point
- change to index.css triggers reload (as intended only of css file without reloading whole page)
- change to elements/proto-element.css does not trigger reload: ![](https://dl.dropboxusercontent.com/s/m4qvxbjsgy9f6aa/2014-06-24%20at%2005.50.png)

--- a/dev/elements/proto-element.css
+++ b/dev/elements/proto-element.css
@@ -11,6 +11,6 @@ proto-element {
 
 /* line 10, ../../src/elements/proto-element.sass */
 :host {
-  background-color: yellow;
+  background-color: blue;
   display: block;
 }
