--- a/src/elements/proto-element.sass
+++ b/src/elements/proto-element.sass
@@ -8,7 +8,7 @@ proto-element
 
 // only :host styles are in use and are scoped within the template they are called from
 \:host
-  background-color: yellow
+  background-color: blue
   display: block
 
 
