--- a/src/elements/proto-element.sass
+++ b/src/elements/proto-element.sass
@@ -9,5 +9,14 @@ body
   display: block
 
 
-  border: 1px solid yellow
+  padding: 0
+
+
+  border: 1px solid pink
   background-color: red
+
+  blockquote
+    padding: 0
+
+
+    text-transform: lowercase
