--- a/dev/elements/proto-element.css
+++ b/dev/elements/proto-element.css
@@ -7,12 +7,22 @@ body {
 :host {
   display: block;
   padding: 0;
-  border: 1px solid pink;
-  background-color: red;
+  background-color: transparent;
 }
-/* line 18, ../../src/elements/proto-element.sass */
-:host blockquote {
-  width: 300px;
-  padding: 0;
+/* line 19, ../../src/elements/proto-element.sass */
+:host .proto-content {
+  padding: 1em;
   text-transform: lowercase;
+}
+/* line 25, ../../src/elements/proto-element.sass */
+:host .proto-content blockquote {
+  padding: 0;
+  -webkit-margin-before: 0;
+  -moz-margin-before: 0;
+  -webkit-margin-after: 0;
+  -moz-margin-after: 0;
+  -webkit-margin-start: 0;
+  -moz-margin-start: 0;
+  -webkit-margin-end: 0;
+  -moz-margin-end: 0;
 }
