--- a/src/elements/proto-element.sass
+++ b/src/elements/proto-element.sass
@@ -12,12 +12,25 @@ body
   padding: 0
 
 
-  border: 1px solid pink
-  background-color: red
+  background-color: transparent
 
-  blockquote
-    width: 300px
-    padding: 0
+  // border: 1px solid pink
+
+  .proto-content
+    padding: 1em
 
 
     text-transform: lowercase
+
+    blockquote
+      padding: 0
+
+
+      -webkit-margin-before: 0
+      -moz-margin-before: 0
+      -webkit-margin-after: 0
+      -moz-margin-after: 0
+      -webkit-margin-start: 0
+      -moz-margin-start: 0
+      -webkit-margin-end: 0
+      -moz-margin-end: 0
