--- a/dev/index.css
+++ b/dev/index.css
@@ -1,4 +1,52 @@
-/* line 1, ../src/index.sass */
+/* line 6, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+}
+
+/* line 16, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block;
+}
+
+/* line 19, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+body {
+  line-height: 1;
+}
+
+/* line 22, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+ol, ul {
+  list-style: none;
+}
+
+/* line 25, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+blockquote, q {
+  quotes: none;
+}
+
+/* line 29, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+blockquote:before, blockquote:after {
+  content: "";
+  content: none;
+}
+
+/* line 35, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+q:before, q:after {
+  content: "";
+  content: none;
+}
+
+/* line 40, /Users/fabianfabian/src/tigerstone/dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss */
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+
+/* line 5, ../src/index.sass */
 body {
   padding: 2em;
   background: white;
