--- a/src/index.sass
+++ b/src/index.sass
@@ -1,6 +1,6 @@
 $bowerpath: ''
 
-@import 'dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss'
+// @import 'dev/bower_components/meyer-reset/stylesheets/_meyer-reset.scss'
 
 body
   padding: 2em
